Bug 1142531:  Check more bits in nsStyleContext::MoveTo assertion.  r=heycam

MozReview-Commit-ID: 455suOkmdj7